# disco-musica

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.cursor/rules/: audio-analysis.mdc  developer-guide.mdc  documentation.mdc  flows.mdc  methods.mdc  models.mdc  project-guide.mdc  tech-research.mdc  technical-blueprint.mdc  training-music-model.mdc
.github/workflows/: ci.yml
docs/: contributing.md  developer_guide.md  documentation.md  flows.md  to-do.md  user_guide.md
docs/api/: README.md
docs/research/: methods.md  project-guide.md  tech-research.md  technical-blueprint.md  training-music-model.md
examples/: audio_analysis_example.py  project_analysis_example.py
kubernetes/: deployment.yaml
modules/: __init__.py  audio_processing.py  data_ingestion.py  inference.py  midi_processing.py  model_selection.py  output_management.py  preprocessing.py  training.py  ui.py
modules/core/: __init__.py  audio_processor.py  audio_to_music_model.py  base_model.py  config.py  midi_processor.py  midi_to_audio_model.py  model_trainer.py  text_to_music_model.py  visualization.py
modules/core/base/: base_model.py  base_resources.py  model_registry.py  model_trainer.py
modules/core/config/: model_config.py
modules/core/exceptions/: base_exceptions.py
modules/core/models/: audio_to_music_model.py  base_model.py  midi_to_audio_model.py  model_registry.py  text_to_music_model.py
modules/core/processors/: audio_processor.py  midi_processor.py  processor_manager.py  text_processor.py
modules/core/resources/: base_resources.py  file_manager.py  generation_resource.py  model_resource.py  project_resource.py  resource_manager.py  track_resource.py
modules/data/storage/: mongo_storage.py  object_storage.py  postgres_storage.py  time_series_storage.py  vector_storage.py
modules/interfaces/: __init__.py  gradio_ui.py  training_ui.py
modules/interfaces/api/: fastapi_app.py
modules/interfaces/logic_pro/: logic_pro_interface.py
modules/interfaces/time_series/: time_series_interface.py
modules/interfaces/vector/: vector_search_interface.py
modules/models/: model_registry.py  model_trainer.py
modules/models/audio/: audio_model.py
modules/models/midi/: midi_model.py
modules/models/production/: mastering_model.py  production_model.py
modules/models/text/: text_model.py
modules/services/: __init__.py  audio_analysis.py  generation_service.py  model_service.py  output_service.py  project_analysis_service.py  project_service.py  resource_service.py
research/: Technical Blueprint.docx  Training Music Model.docx  project-guide.txt
tests/: test_audio_analysis.py  test_data_ingestion.py  test_project_analysis_service.py
utils/: __init__.py  cloud_utils.py  google_colab_utils.py  logging_utils.py
(+8 files in other folders)
